TAG: seqcacheload-4-4-2-1
DATE: 11/22/2011
STAFF: lec
CHANGES:
1) added -f to Configuration.default

TAG: seqcacheload-4-4-1-3
DATE: 09/08/2011
STAFF: sc
CHANGES: TR10308/biotype conflict revision
1)  Configuration.defaults - added NCBI_EQUIV, ENSEMBL_EQUIV, VEGA_EQUIV,
    NC_RNA_TERM, ALL_FEATURES_TERM
2) seqmarker.py - updated generateBiotypeLookups() -  updated the biotype
   conflict algorithm

TAG: seqcacheload-4-4-1-2
DATE: 04/04/2011
STAFF: lec
CHANGES: 
1) TR10658/seqmarker.py/add _Cache_key

TAG: seqcacheload-4-4-1-1
DATE: 03/11/2011
STAFF: lec
CHANGES: 
1) seqdummy.csh; removed call to trigger/SEQ_Source_Assoc_create.object

TAG: seqcacheload-4-4-0-2
DATE: 03/10/2011
STAFF: lec
CHANGES: 
1) seqdummy.py; SEQ_Source_Assoc trigger removed

TAG: seqcacheload-4-4-0-1
DATE: 11/15/2010
STAFF: sc
CHANGES: Merge tr10308 to trunk

TAG: seqcacheload-tr10308-3
DATE: 11/15/2010
STAFF: sc
CHANGES: After final seq grp verification

TAG: seqcacheload-tr10308-2
DATE: 10/08/2010
STAFF: sc
CHANGES: Round 2 after testing 

TAG: seqcacheload-tr10308-1
DATE: 10/08/2010
STAFF: sc
CHANGES: initial implementation

TAG: seqcacheload-tr10308-BP
DATE: 10/08/2010
STAFF: sc
CHANGES: Biotype Conflict revision

TAG: seqcacheload-4-3-3-2
DATE: 08/31/2010
STAFF: sc
CHANGES: TR10162`
1) Fix bug in loading lookups and typo in currentLongestProtein
   variable name 

TAG: seqcacheload-4-3-3-1
DATE: 03/11/2010
STAFF: lec
CHANGES:
1) merge TR9782 branch to the trunk

TAG: seqcacheload-tr9782-4
DATE: 03/08/2010
STAFF: sc
CHANGES:
1) comments

TAG: seqcacheload-tr9782-3
DATE: 03/01/2010
STAFF: sc
CHANGES:
1) TR9774 rep trans/prot algorithm update

TAG: seqcacheload-tr9782-2
TAG: seqcacheload-tr9782-1
DATE: 02/24/2010
STAFF: lec
CHANGES:
1) TR9239/seqmarker.py/add biotype lookup

TAG: seqcacheload-tr9782-BP
DATE: 02/18/2010
STAFF: lec
CHANGES:
1) Branch point ag for TR9782/TR9239 4.33 release

TAG: seqcacheload-4-2-2-1
DATE: 07/16/2009
STAFF: dbm
CHANGES: